# agentic-sdlc-runtime

./: README.md  agentic-sdlc-runtime.pyproj  agentic-sdlc-runtime.sln  pyproject.toml
.github/workflows/: ci.yml  p6-prepare.yml  p6-release.yml
agents/: architecture.json  developer.json  incident.json  product.json  release.json  reviewer.json  security.json  test.json
deploy/kubernetes/: worker.yaml
examples/: end_to_end_demo.py  run_demo.py
scripts/: cross_repo_release.py  developer_action.py  p6_action.py  security_scan.py
src/agentic_sdlc_runtime/: __init__.py  authorization.py  checkpoint.py  cli.py  context.py  cross_repo.py  definitions.py  demo_environment.py  developer.py  events.py  evidence.py  external_environment.py  github.py  mcp.py  model_gateway.py  models.py  p6.py  production.py  quality.py  runtime.py  workflow.py
src/agentic_sdlc_runtime.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: echo_mcp_server.py  test_authorization.py  test_context.py  test_cross_repo.py  test_definitions.py  test_developer.py  test_evidence.py  test_mcp.py  test_mcp_stdio.py  test_p6.py  test_production.py  test_runtime.py  test_workflow.py
