[project]
name = "agentic-sdlc-runtime"
version = "0.1.0"
description = "Shared functional runtime for governed Agentic SDLC agents"
requires-python = ">=3.11"

[project.scripts]
agentic-sdlc = "agentic_sdlc_runtime.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]
production = ["boto3>=1.35"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
